<resources>
    <string name="Fixed">Fixed</string>
    <string name="add_words">Add Text</string>
    <string name="album">Album</string>
    <string name="all">All</string>
    <string name="all_pictures">All photos</string>
    <string name="alpha">Alpha</string>
    <string name="anmi_click_preview">Click to view</string>
    <string name="anmi_complete">Complete animated GIFs</string>
    <string name="apertrue_tips">Click on the screen to focus again</string>
    <string name="apertrue_title">Blur Adjustment for Background</string>
    <string name="aperture_lock_fail">Data Error</string>
    <string name="aperture_save_failed">Save failed</string>
    <string name="app_name">Make GIF</string>
    <string name="apply_effect">Apply</string>
    <string name="appupdate_later">Later</string>
    <string name="appupdate_update">Update</string>
    <string name="appupdate_update_msg">"Update Content: 
%1$1s"</string>
    <string name="appupdate_update_notification">Update Notification</string>
    <string name="appupdate_update_size">Update Size: %1$1s</string>
    <string name="appupdate_update_unknow">Unknow</string>
    <string name="appupdate_update_version">New Version: %1$1s</string>
    <string name="aspect">Aspect ratio</string>
    <string name="aspect16to9_effect_ex">16:9</string>
    <string name="aspect1to1_effect">1:1</string>
    <string name="aspect2to3_effect">2:3</string>
    <string name="aspect3to2_effect">3:2</string>
    <string name="aspect3to4_effect">3:4</string>
    <string name="aspect4to3_effect">4:3</string>
    <string name="aspect4to6_effect">4:6</string>
    <string name="aspect5to7_effect">5:7</string>
    <string name="aspect7to5_effect">7:5</string>
    <string name="aspect9to16_effect">16:9</string>
    <string name="aspect9to16_effect_ex">9:16</string>
    <string name="aspectCircle_effect">Circle</string>
    <string name="aspectDin_effect">Din</string>
    <string name="aspectFun_effect">Fun</string>
    <string name="aspectHeart_effect">Heart</string>
    <string name="aspectNone_effect">Free</string>
    <string name="aspectOriginal_effect">Original</string>
    <string name="aspectlandscape_effect">Landscape</string>
    <string name="aspectportrait_effect">Portrait</string>
    <string name="auto_adjust">Auto Adjust</string>
    <string name="back">Back</string>
    <string name="beard">beard</string>
    <string name="bekeh_cancle">Loading failed, please try again!</string>
    <string name="bekeh_service_die">Service is accidentally disabled, please restart the app!</string>
    <string name="bold">Bold</string>
    <string name="border">Border</string>
    <string name="border_large">Large</string>
    <string name="border_medium">Medium</string>
    <string name="border_none">None</string>
    <string name="border_small">Small</string>
    <string name="borders">Borders</string>
    <string name="btn_contrast">Contrast</string>
    <string name="btn_flip_horizontal">Left/right mirror</string>
    <string name="btn_flip_vertical">Up/down mirror</string>
    <string name="btn_redo">Redo</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_rotate_left">Rotate left</string>
    <string name="btn_rotate_right">Rotate right</string>
    <string name="btn_scale">Scale</string>
    <string name="btn_undo">Undo</string>
    <string name="bubble">Bubble</string>
    <string name="bubble_default_words">Click to input text!</string>
    <string name="bwfilter">BW Filter</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_edit_original">Unable to edit the original photo</string>
    <string name="cannot_load_image">Unable to load the photo!</string>
    <string name="cannot_use_erase">There is currently nothing to erase.</string>
    <string name="category_hot">Popularity ranking</string>
    <string name="collage">Collage</string>
    <string name="collage_cancel">Cancel</string>
    <string name="collage_confirm">OK</string>
    <string name="collage_one_more">Collage ore more</string>
    <string name="color">Color</string>
    <string name="color_border_clear">Clear</string>
    <string name="color_border_color">Color</string>
    <string name="color_border_corner_size">Corner Size</string>
    <string name="color_border_size">Thickness</string>
    <string name="color_pick_select">Choose custom color</string>
    <string name="color_pick_title">Select Color</string>
    <string name="color_temperature">Color Temp.</string>
    <string name="compare_original">Compare</string>
    <string name="confirm">OK</string>
    <string name="content">Content</string>
    <string name="contentDescription">Photo description</string>
    <string name="contrast">Contrast</string>
    <string name="crop">Crop</string>
    <string name="crop_bad_picture_size">Too small area for cropping</string>
    <string name="crop_ratio">Crop scale</string>
    <string name="crown">crown</string>
    <string name="curvesRGB">Curves</string>
    <string name="curves_channel_blue">Blue</string>
    <string name="curves_channel_green">Green</string>
    <string name="curves_channel_red">Red</string>
    <string name="curves_channel_rgb">RGB</string>
    <string name="custom_border">Custom</string>
    <string name="delete">Delete</string>
    <string name="developing">New function under development…</string>
    <string name="discard_change">Discard Changes</string>
    <string name="do_not_save_confirm">Discard all changes?</string>
    <string name="doc">doc</string>
    <string name="docBrightenEyes">Brighten</string>
    <string name="docEyesCircleRemove">Eyes Circle Remove</string>
    <string name="docdeflash">Degrease</string>
    <string name="doceyesEnhance">Eyes Enhance</string>
    <string name="doceyesEnlarge">Enlarger</string>
    <string name="docfaceSlime">Face Slim</string>
    <string name="docskinsmooth">Smoother</string>
    <string name="docskintone">Whitening</string>
    <string name="docteethWhite">Teeth Whitening</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="download_failure">Unable to download photos due to network disconnection.</string>
    <string name="downloaded">Downloaded</string>
    <string name="downloaded_to_local">Downloaded to local directory</string>
    <string name="downsample">Downsample</string>
    <string name="draw_clear">Clear</string>
    <string name="draw_color">Color</string>
    <string name="draw_hue">Hue</string>
    <string name="draw_paint">Paint</string>
    <string name="draw_saturation">Saturation</string>
    <string name="draw_shape">Shape</string>
    <string name="draw_size">Size</string>
    <string name="draw_size_accept">OK</string>
    <string name="draw_size_title">Select Size</string>
    <string name="draw_style">Style</string>
    <string name="draw_style_brush_marker">Spatter</string>
    <string name="draw_style_brush_spatter">Marker</string>
    <string name="draw_style_line">Lines</string>
    <string name="draw_value">Brightness</string>
    <string name="dream">dream</string>
    <string name="edge">Edges</string>
    <string name="edit">Edit</string>
    <string name="edited_photos">Photo Edit</string>
    <string name="editor_chan_sat_blue">Blue</string>
    <string name="editor_chan_sat_cyan">Cyan</string>
    <string name="editor_chan_sat_green">Green</string>
    <string name="editor_chan_sat_magenta">Magenta</string>
    <string name="editor_chan_sat_main">Main</string>
    <string name="editor_chan_sat_red">Red</string>
    <string name="editor_chan_sat_yellow">Yellow</string>
    <string name="editor_grad_brightness">Brightness</string>
    <string name="editor_grad_contrast">Contrast</string>
    <string name="editor_grad_new">new</string>
    <string name="editor_grad_saturation">Saturation</string>
    <string name="editor_grad_style">Style</string>
    <string name="editor_looks_arts">Art</string>
    <string name="editor_looks_beauty">Beauty</string>
    <string name="editor_looks_classics">Classical</string>
    <string name="editor_looks_lomo">Effects</string>
    <string name="effects_art_cloudy">Water Color</string>
    <string name="effects_art_flame">Flame</string>
    <string name="effects_art_gothic">Expressional</string>
    <string name="effects_art_picasso">Picasso</string>
    <string name="effects_art_rock">Sketch</string>
    <string name="effects_art_stamp">Sea Wave</string>
    <string name="effects_art_starrynight">Van Gogh</string>
    <string name="effects_art_sunset">Oil</string>
    <string name="effects_drama">Drama</string>
    <string name="effects_emboss">Emboss</string>
    <string name="effects_fisheye">Fish eye</string>
    <string name="effects_gray_scale">Black/White</string>
    <string name="effects_lomo">LOMO</string>
    <string name="effects_man1">French B/W</string>
    <string name="effects_man2">Korean</string>
    <string name="effects_man3">Recollection</string>
    <string name="effects_man4">Street</string>
    <string name="effects_man5">Whitening</string>
    <string name="effects_man6">Handsome</string>
    <string name="effects_man7">Fashion</string>
    <string name="effects_man8">Magazine</string>
    <string name="effects_miniature">Tilt-shift</string>
    <string name="effects_newsketch">Color Sketch</string>
    <string name="effects_prague_three">Mucha</string>
    <string name="effects_pretty_beautiful">Aesthetical</string>
    <string name="effects_pretty_blue">Blue</string>
    <string name="effects_pretty_japan">Japanese</string>
    <string name="effects_pretty_moonlight">Moonlight</string>
    <string name="effects_pretty_nature">Nature</string>
    <string name="effects_pretty_pink">Pink</string>
    <string name="effects_pretty_sweet">Sweet</string>
    <string name="effects_pretty_whitedew">White Dew</string>
    <string name="effects_sketch">Sketch</string>
    <string name="ellipsis">...</string>
    <string name="emptiness">Blur</string>
    <string name="exit">Exit</string>
    <string name="exit_confirm">Back</string>
    <string name="export_flattened">Export Flattened Image</string>
    <string name="export_image">Export</string>
    <string name="export_video">Export GIF</string>
    <string name="exposure">Exposure</string>
    <string name="eye">eye</string>
    <string name="eyebrow">eyebrow</string>
    <string name="face">face</string>
    <string name="ffx_bleach">Castle</string>
    <string name="ffx_blue_crush">Blues</string>
    <string name="ffx_bw_contrast">Nostalgia</string>
    <string name="ffx_instant">Vintage</string>
    <string name="ffx_original">Original</string>
    <string name="ffx_punch">HDR</string>
    <string name="ffx_vintage">Antique</string>
    <string name="filtershow_manage_preset">Manage user presets</string>
    <string name="filtershow_redo">Redo</string>
    <string name="filtershow_show_info_panel">Information</string>
    <string name="filtershow_undo">Undo</string>
    <string name="hue">Hue</string>
    <string name="main_set_about">About</string>
    <string name="main_set_checkupdate">Check for updates</string>
    <string name="main_set_clearCache">Clear Cache</string>
    <string name="main_set_feedback">Feedback</string>
    <string name="main_set_quality">Photo Quality</string>
    <string name="main_set_set">Set</string>
    <string name="print_image">Print</string>
    <string name="reset">Reset</string>
    <string name="restore">Default</string>
    <string name="saturation">Saturation</string>
    <string name="shadow">Shadow</string>
    <string name="share">Share</string>
    <string name="show_imagestate_panel">Show Applied Effects</string>
    <string name="vignette_contrast">Contrast</string>
    <string name="vignette_exposure">Exposure</string>
    <string name="vignette_falloff">Falloff</string>
    <string name="vignette_main">Vignette</string>
    <string name="vignette_saturation">Saturation</string>
</resources>