<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/popupwindow_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_chan_sat_main" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/editor_chan_sat_main" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
        <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_chan_sat_red" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/editor_chan_sat_red" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
        <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_chan_sat_yellow" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/editor_chan_sat_yellow" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
        <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_chan_sat_green" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/editor_chan_sat_green" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
        <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_chan_sat_cyan" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/editor_chan_sat_cyan" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
        <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_chan_sat_blue" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/editor_chan_sat_blue" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
        <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_chan_sat_magenta" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/editor_chan_sat_magenta" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
    </LinearLayout>
</ScrollView>