<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="@dimen/crop_panel_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup android:gravity="center" android:orientation="horizontal" android:id="@id/bottom_panel" android:layout_width="wrap_content" android:layout_height="fill_parent" android:weightSum="5.0">
        <RadioButton android:textSize="@dimen/font_size_small" android:textColor="@drawable/text_selected" android:id="@id/smoothButton" android:layout_width="@dimen/tab_width_vertical_beauty" android:layout_height="wrap_content" android:text="@string/docskinsmooth" android:drawableTop="@drawable/btn_beauty_smooth_selected" android:layout_weight="1.0" style="@style/bottom_btn_item" />
        <RadioButton android:textSize="@dimen/font_size_small" android:textColor="@drawable/text_selected" android:id="@id/toneButton" android:layout_width="@dimen/tab_width_vertical_beauty" android:layout_height="wrap_content" android:text="@string/docskintone" android:drawableTop="@drawable/btn_beauty_tone_selected" android:layout_weight="1.0" style="@style/bottom_btn_item" />
        <RadioButton android:textSize="@dimen/font_size_small" android:textColor="@drawable/text_selected" android:id="@id/enlargeButton" android:layout_width="@dimen/tab_width_vertical_beauty" android:layout_height="wrap_content" android:text="@string/doceyesEnlarge" android:drawableTop="@drawable/btn_beauty_enlarge_selected" android:layout_weight="1.0" style="@style/bottom_btn_item" />
        <RadioButton android:textSize="@dimen/font_size_small" android:textColor="@drawable/text_selected" android:id="@id/brightenButton" android:layout_width="@dimen/tab_width_vertical_beauty" android:layout_height="wrap_content" android:text="@string/docBrightenEyes" android:drawableTop="@drawable/btn_beauty_brighten_selected" android:layout_weight="1.0" style="@style/bottom_btn_item" />
        <RadioButton android:textSize="@dimen/font_size_small" android:textColor="@drawable/text_selected" android:id="@id/faceSlimeButton" android:layout_width="@dimen/tab_width_vertical_beauty" android:layout_height="wrap_content" android:text="@string/docfaceSlime" android:drawableTop="@drawable/btn_beauty_faceslime_selected" android:layout_weight="1.0" style="@style/bottom_btn_item" />
    </RadioGroup>
</HorizontalScrollView>