<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/popupwindow_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_vignette_main" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/vignette_main" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
    <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_vignette_falloff" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/vignette_falloff" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
    <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_vignette_contrast" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/vignette_contrast" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
    <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_vignette_saturation" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/vignette_saturation" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
    <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/editor_item_vignette_exposure" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/vignette_exposure" android:singleLine="true" android:visible="false" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
</LinearLayout>