<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/popupwindow_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/curve_item_rgb" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/curves_channel_rgb" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
    <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/curve_item_red" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/curves_channel_red" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
    <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/curve_item_green" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/curves_channel_green" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
    <Button android:textSize="@dimen/editor_panel_text_size" android:textColor="@color/hilit_color" android:gravity="start|center" android:id="@id/curve_item_blue" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/popup_window_item_height" android:text="@string/curves_channel_blue" android:singleLine="true" android:textAllCaps="true" android:layout_marginStart="16.0dip" />
</LinearLayout>