<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/looks_layout" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.gallery3d.filtershow.editors.SwapButton android:textSize="@dimen/sub_panel_text_size" android:textColor="@color/default_text_color" android:id="@id/look_lomo" android:background="@null" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/editor_looks_lomo" android:singleLine="true" android:layout_weight="1.0" android:textAllCaps="true" />
    <com.android.gallery3d.filtershow.editors.SwapButton android:textSize="@dimen/sub_panel_text_size" android:textColor="@color/default_text_color" android:id="@id/look_beauty" android:background="@null" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/editor_looks_beauty" android:singleLine="true" android:layout_weight="1.0" android:textAllCaps="true" />
    <com.android.gallery3d.filtershow.editors.SwapButton android:textSize="@dimen/sub_panel_text_size" android:textColor="@color/default_text_color" android:id="@id/look_classics" android:background="@null" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/editor_looks_classics" android:singleLine="true" android:layout_weight="1.0" android:textAllCaps="true" />
    <com.android.gallery3d.filtershow.editors.SwapButton android:textSize="@dimen/sub_panel_text_size" android:textColor="@color/default_text_color" android:id="@id/look_art" android:background="@null" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/editor_looks_arts" android:singleLine="true" android:layout_weight="1.0" android:textAllCaps="true" />
</LinearLayout>