<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/adjustcolor_layout" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.gallery3d.filtershow.editors.SwapButton android:textSize="18.0dip" android:textColor="@color/default_text_color" android:id="@id/applyEffect1" android:background="@null" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contrast" android:layout_weight="1.0" android:textAllCaps="true" />
    <com.android.gallery3d.filtershow.editors.SwapButton android:textSize="18.0dip" android:textColor="@color/default_text_color" android:id="@id/applyEffect2" android:background="@null" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hue" android:layout_weight="1.0" android:textAllCaps="true" />
    <com.android.gallery3d.filtershow.editors.SwapButton android:textSize="18.0dip" android:textColor="@color/default_text_color" android:id="@id/applyEffect3" android:background="@null" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/saturation" android:layout_weight="1.0" android:textAllCaps="true" />
</LinearLayout>